# BomberMan

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  bomberman_doc
Assets/icns/: Bomb.icns
Assets/kernel/: change_array.cl  init_array.cl  init_brick_block.cl  init_cloud.cl  init_sphere_by_points.cl  init_sphere_by_quads.cl  init_sphere_by_quads_tmap.cl  update_brick_block.cl  update_cloud.cl  update_sphere_by_points.cl  update_sphere_by_quads.cl  update_sphere_by_quads_tmap.cl
Assets/maps/: map1.txt  map2.txt  map3.txt
Assets/models/brick/: brick.mtl
Assets/models/general/bomb/: model.fbx
Assets/models/general/gate_active/: model.fbx
Assets/models/general/gate_inactive/: model.fbx
Assets/models/general/monster/: model.fbx
Assets/models/general/robot/: model.fbx
Assets/models/general/troll/: model.fbx
Assets/models/general/villain/: model.fbx
Assets/models/ground/: ground.mtl
Assets/models/map/first/breakableWall/: model.fbx
Assets/models/map/first/ground/: model.fbx
Assets/models/map/first/unbreakableWall/: model.fbx
Assets/models/map/forest/perimeterWall/: model.fbx
Assets/models/runner/: runner.dae  runner.fbx
Assets/models/wall/: wall.mtl
Assets/shader/: animatedModelShader.vx.glsl  animatedShadowShader.vx.glsl  gui.ft.glsl  gui.vx.glsl  modelShader.ft.glsl  modelShader.vx.glsl  normalModel.ft.glsl  normalModel.vx.glsl  quad.vx.glsl  quad_shadow.ft.glsl  shadowShader.ft.glsl  shadowShader.vx.glsl  sparks.ft.glsl  sparks.vx.glsl  sprite.ft.glsl  sprite.vx.glsl  sprite_p.ft.glsl  sprite_p.vx.glsl  sprite_quad.ft.glsl  sprite_quad.vx.glsl  sprite_quad_brick.vx.glsl  sprite_quad_cloud.ft.glsl  sprite_quad_cloud.vx.glsl
cmake-modules/: FindFFmpeg.cmake
cmakeModules/: macros.cmake
docs/: _a_a_b_b_8cpp.html  _a_a_b_b_8hpp.html  _a_a_b_b_8hpp_source.html  _a_i_controller_8cpp.html  _a_i_controller_8h.html  _a_i_controller_8h_source.html  _agent_8h.html  _agent_8h_source.html  _animation_8cpp.html  _animation_8h.html  _animation_8h_source.html  _animation_utils_8cpp.html  _animation_utils_8h.html  _animation_utils_8h_source.html  _bomb_8cpp.html  _bomb_8h.html  _bomb_8h_source.html  _c_l_engine_8cpp.html  _c_l_engine_8hpp.html  _c_l_engine_8hpp_source.html  _camera_8cpp.html  _camera_8hpp.html  _camera_8hpp_source.html  _configure_8cpp.html  _configure_8hpp.html  _configure_8hpp_source.html  _core_8cpp.html  _core_8hpp.html  _core_8hpp_source.html  _custom_exception_8cpp.html  _custom_exception_8hpp.html  _custom_exception_8hpp_source.html  _entity_8cpp.html  _entity_8h.html  _entity_8h_source.html  _ffmpeg_player_8cpp.html  _ffmpeg_player_8hpp.html  _ffmpeg_player_8hpp_source.html  _game_8cpp.html  _game_8hpp.html  (+290 more)
inc/: CMakeLists.txt  Configure.hpp  Core.h  Core.hpp  CustomException.hpp  Game.hpp  GameWindow.hpp
inc/AI/: AIController.h  Agent.h  Brains.h
inc/Animation/: Animation.hpp  Animator.hpp  JointTransform.hpp  KeyFrame.hpp  Quaternion.hpp
inc/Entity/: Bomb.h  Entity.h  MovingEntity.h
inc/GraphicCore/: Camera.hpp  LightManager.hpp  Renderer.hpp
inc/Gui/: Gui.h  MainMenu.h
inc/InputManagement/: InputManager.hpp  KeyboardHandler.hpp
inc/LogicCore/: Entity.h  Hero.h  LoadMap.h  MapForRendering.h  MapGeneration.hpp  MovingEntity.h  Serialization.hpp  SquareInstance.h  Timer.h  TimerBase.h  TimerManager.h
inc/ResourceManagement/: Animation.h  CLEngine.hpp  FfmpegPlayer.hpp  Joint.hpp  Mesh.hpp  Model.hpp  MusicPlayer.hpp  ParticleManager.hpp  ParticleSystem.hpp  ParticleSystemBrick.hpp  ParticleSystemCreator.hpp  ParticleSystemPoint.hpp  ParticleSystemQuad.hpp  ResourceManager.hpp  Shader.hpp  Skybox.hpp  Texture.hpp  ZipHolder.hpp  cl.hpp
inc/StateMachine/: StateMachine.h
inc/Utilities/: AABB.hpp  AnimationUtils.h
inc/game_logic/: MapGeneration.h  Serialization.h
inc/nibblerRenderer/: CLEngine.hpp  INibblerDisplay.hpp  Renderer.hpp  ResourceManager.hpp  Shader.hpp  SpriteRenderer.hpp  cl.hpp
inc/renderer/: Camera.hpp  CustomException.hpp  NewResourceManager.hpp  Renderer.hpp  ResourceManager.hpp  TestRenderer.hpp  Texture.hpp
scripts/: build-debug.sh  build-pack.sh  build-release.sh
src/: CMakeLists.txt  Camera.cpp  Configure.cpp  Core.cpp  CustomException.cpp  Game.cpp  GameWindow.cpp  main.cpp
src/AI/: AIController.cpp  Brains.cpp
src/Animation/: Animation.cpp  Animator.cpp  JointTransform.cpp  KeyFrame.cpp  Quaternion.cpp
src/Entity/: Bomb.cpp  Entity.cpp  MovingEntity.cpp
src/GraphicCore/: Camera.cpp  LightManager.cpp  Renderer.cpp
src/Gui/: Gui.cpp  MainMenu.cpp  imgui_impl_sdl_gl3.cpp
src/InputManagement/: InputManager.cpp  KeyboardHandler.cpp
src/LogicCore/: Entity.cpp  Hero.cpp  LoadMap.cpp  MapForRendering.cpp  MapGeneration.cpp  MovingEntity.cpp  Serialization.cpp  SquareInstance.cpp  Timer.cpp  TimerBase.cpp  TimerManager.cpp
src/ResourceManagement/: Animation.cpp  CLEngine.cpp  FfmpegPlayer.cpp  Joint.cpp  Mesh.cpp  Model.cpp  MusicPlayer.cpp  ParticleManager.cpp  ParticleSystem.cpp  ParticleSystemBrick.cpp  ParticleSystemCreator.cpp  ParticleSystemPoint.cpp  ParticleSystemQuad.cpp  ResourceManager.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  ZipHolder.cpp
src/Utilities/: AABB.cpp  AnimationUtils.cpp
src/game_logic/: MapGeneration.cpp  Serialization.cpp
src/nibblerRenderer/: CLEngine.cpp  Character.cpp  CustomException.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
src/renderer/: NewResourceManager.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  TestRenderer.cpp  Texture.cpp
src/timer/: CMakeLists.txt  Makefile  main.c
src/timer/include/: timer.h
src/timer/src/: timer.c
